--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@ html, body {
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:40px; font-weight:bold; z-index:3000;
+  color:#fff; font-size:36px; font-weight:bold; z-index:3000;
   text-align:center;
   animation:eyeGlow 2s ease-in-out forwards;
 }
 @keyframes eyeGlow {
   0% { opacity:0.2; text-shadow:none; }
-  50% { opacity:1; text-shadow:0 0 20px #fff,0 0 40px #fff; }
+  50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; }
   100% { opacity:0.2; text-shadow:none; }
 }
 
-/* --- BUTTONS --- */
-#startBtn, #indexBtn, #updateBtn {
-  display:none; margin:0 auto; font-size:24px; padding:15px 30px;
-  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
+/* --- HOME SCREEN BUTTONS --- */
+#startBtn, #indexBtn, #updatesBtn {
+  display:none; margin:10px auto; width:80%;
+  font-size:24px; padding:15px;
   border:none; border-radius:12px; color:#fff;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
-  z-index:1000;
+  cursor:pointer; z-index:1000;
 }
-#startBtn { margin-top:20vh; }
-#indexBtn, #updateBtn { margin-top:15px; }
+#startBtn { background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
+#indexBtn { background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
+#updatesBtn { background: linear-gradient(45deg,#0f0,#0a0); box-shadow:0 0 10px #0a0,0 0 20px #0f0; }
 
 /* --- Countdown & Score --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
   font-size:60px; color:#d166ff;
-  text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
+  text-shadow:0 0 15px #d166ff,0 0 30px #a044ff;
   z-index:1001; display:none;
 }
 #scoreContainer {
@@ -52,9 +52,9 @@ html, body {
   transform:translateX(-50%);
   z-index:1001; text-align:center; display:none;
 }
-#highscore { font-size:16px; color:#ff0; margin-bottom:5px; }
-#score { font-size:20px; color:#d166ff; }
-#lives { font-size:16px; color:#f00; margin-top:5px; }
+#highscore { font-size:18px; color:#ff0; margin-bottom:5px; }
+#score { font-size:24px; color:#d166ff; }
+#lives { font-size:18px; color:#f00; margin-top:5px; }
 
 /* --- Bubbles --- */
 .bubble {
@@ -62,88 +62,109 @@ html, body {
   display:flex; justify-content:center; align-items:center;
   font-size:20px; font-weight:bold; color:#fff;
   background:linear-gradient(135deg,#a044ff,#6a00f4);
-  border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
+  border:2px solid #d166ff; box-shadow:0 0 8px #d166ff,0 0 15px #a044ff inset;
   position:absolute; cursor:pointer;
-  user-select:none;
-  touch-action: manipulation;
 }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:22px; }
-.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:22px; }
+.bubble.invert { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:22px; }
+.bubble.instawin { background: linear-gradient(135deg,#ff0,#0f0); color:#000; font-size:22px; font-weight:bold; }
 .bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:20px; }
 .bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:22px; }
-.bubble.instawin { background: linear-gradient(135deg,#0f0,#00ff00); color:#000; font-size:24px; }
 
-/* --- Panels --- */
+/* --- Index & Updates Panel --- */
 .panel {
   position:fixed; top:100%; left:0; width:100%;
-  max-height:70%; overflow-y:auto; transition:top 0.5s ease; padding:15px;
-  z-index:999; box-shadow:0 -5px 20px #d166ff; background:rgba(10,10,10,0.95);
+  max-height:70%; background:rgba(10,10,10,0.95);
+  overflow-y:auto; transition:top 0.5s ease; padding:15px;
+  z-index:999; border-top-left-radius:15px; border-top-right-radius:15px;
 }
-.panel.green { background: rgba(0,100,0,0.95); box-shadow:0 -5px 20px #0f0; }
-.panel h2 { text-transform:uppercase; font-size:18px; }
+.panel h2 { text-transform:uppercase; margin-bottom:10px; }
 .panel .closeBtn {
   position:absolute; top:10px; right:10px; font-size:24px; cursor:pointer;
-  color:#fff; font-weight:bold; z-index:1001;
+  color:#fff; font-weight:bold;
 }
-.indexItem { display:flex; align-items:center; margin:8px 0; font-size:14px; }
-.indexItem .bubbleImg {
+.panel .indexItem { display:flex; align-items:center; margin:8px 0; }
+.panel .bubbleImg {
   width:50px; height:50px; margin-right:10px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
   font-weight:bold; color:#fff; border:2px solid #d166ff;
   box-shadow:0 0 10px #d166ff inset; animation:float 1s infinite alternate;
-  font-size:14px;
 }
-.indexItem .desc { flex:1; }
-.indexItem .rarity { font-weight:bold; }
-
-@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-6px);} }
+.panel .desc { flex:1; font-size:14px; }
+.panel .rarity { font-weight:bold; font-size:14px; }
+@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-8px);} }
 
 /* --- End Screen --- */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
-  background:rgba(0,0,0,0.9); display:none; flex-direction:column;
+  background:rgba(0,0,0,0.95); display:none; flex-direction:column;
   justify-content:center; align-items:center; color:#fff; font-size:30px;
   z-index:1500; text-align:center;
 }
 #continueBtn {
-  margin-top:20px; font-size:20px; padding:10px 30px;
+  margin-top:20px; font-size:20px; padding:12px 30px;
   border:none; border-radius:10px; cursor:pointer; color:#fff;
   background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
-  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+  box-shadow:0 0 8px #d166ff,0 0 15px #a044ff;
 }
 
 /* --- Version --- */
 #versionLabel {
-  position:fixed; top:5px; right:5px; font-size:12px;
+  position:fixed; top:5px; right:5px; font-size:14px;
   color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none;
+}
+
+/* --- Easter Egg --- */
+#easterEgg {
+  position: fixed; top: 0; left:0; width:100%; height:100%;
+  background:rgba(0,0,0,0.9); color:red; font-size:120px;
+  font-weight:bold; display:flex; justify-content:center; align-items:center;
+  z-index:2000; display:none; text-transform:uppercase; opacity:0;
+  animation:fadeShake 5s forwards;
+}
+@keyframes fadeShake {
+  0%{opacity:0; transform:translateX(0);}
+  10%{opacity:1; transform:translateX(-5px);}
+  20%{transform:translateX(5px);}
+  30%{transform:translateX(-5px);}
+  40%{transform:translateX(5px);}
+  50%{transform:translateX(-5px);}
+  60%{transform:translateX(5px);}
+  70%{transform:translateX(-5px);}
+  80%{transform:translateX(5px);}
+  90%{transform:translateX(-5px);}
+  100%{opacity:0; transform:translateX(0);}
 }
 </style>
 </head>
 <body>
 
 <div id="loadingScreen">Level 12 studio</div>
-<div id="versionLabel">Released 1.2.0</div>
 
+<div id="versionLabel">Released 1.2.0</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
-<button id="updateBtn">UPDATY</button>
+<button id="updatesBtn">UPDATY</button>
 
+<!-- Index Panel -->
 <div id="indexPanel" class="panel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
   <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Běžná:</span> +1 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">invert</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0,#0f0); color:#000;">*12*</div><div class="desc"><span class="rarity">Extrémně vzácná 0,05%:</span> +999999999 skóre</div></div>
 </div>
 
-<div id="updatePanel" class="panel green">
+<!-- Updates Panel -->
+<div id="updatesPanel" class="panel">
   <div class="closeBtn">✖</div>
   <h2>UPDATY</h2>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Nová bublina:</span> +144 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#00ff00); color:#000;">*12*</div><div class="desc"><span class="rarity">Nová bublina:</span> Insta Win +999999999 skóre</div></div>
-  <div class="indexItem"><div class="desc">Přidáno tlačítko UPDATY pro zobrazení novinek</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">invert</div><div class="desc"><span class="rarity">Nová:</span> +144 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0,#0f0); color:#000;">*12*</div><div class="desc"><span class="rarity">Nová:</span> +999999999 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#fff;">Updaty</div><div class="desc">Nové tlačítko "Updaty" bylo přidáno do menu</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -158,14 +179,16 @@ html, body {
   <button id="continueBtn">POKRAČOVAT</button>
 </div>
 
+<div id="easterEgg"></div>
+
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
-const updateBtn=document.getElementById('updateBtn');
+const updatesBtn=document.getElementById('updatesBtn');
 const indexPanel=document.getElementById('indexPanel');
-const updatePanel=document.getElementById('updatePanel');
+const updatesPanel=document.getElementById('updatesPanel');
 const countdownEl=document.getElementById('countdown');
 const scoreContainer=document.getElementById('scoreContainer');
 const scoreEl=document.getElementById('score');
@@ -175,59 +198,67 @@ const popSound=document.getElementById('popSound');
 const endScreen=document.getElementById('endScreen');
 const finalScoreText=document.getElementById('finalScoreText');
 const continueBtn=document.getElementById('continueBtn');
+const versionLabel=document.getElementById('versionLabel');
+const easterEl=document.getElementById('easterEgg');
+const closeBtns=document.querySelectorAll('.closeBtn');
 const loadingScreen=document.getElementById('loadingScreen');
-const indexClose=document.querySelector('#indexPanel .closeBtn');
-const updateClose=document.querySelector('#updatePanel .closeBtn');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
-// --- Loading ---
+// --- LOADING SCREEN ---
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-    updateBtn.style.display='block';
-    attachButtons();
-  },1500);
+    updatesBtn.style.display='block';
+    attachButtonEvents();
+  },2000);
 });
 
-function attachButtons(){
+// --- BUTTON LOGIC ---
+function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
+  
   indexBtn.addEventListener('click',()=>togglePanel(indexPanel));
-  updateBtn.addEventListener('click',()=>togglePanel(updatePanel));
-  indexClose.addEventListener('click',()=>closePanel(indexPanel));
-  updateClose.addEventListener('click',()=>closePanel(updatePanel));
+  updatesBtn.addEventListener('click',()=>togglePanel(updatesPanel));
+  
+  closeBtns.forEach(btn=>btn.addEventListener('click',()=>{
+    btn.parentElement.style.top='100%';
+    startBtn.style.display='block';
+    indexBtn.style.display='block';
+    updatesBtn.style.display='block';
+  }));
+  
   continueBtn.addEventListener('click',()=>{
     endScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-    updateBtn.style.display='block';
+    updatesBtn.style.display='block';
+    versionLabel.style.display='block';
   });
 }
 
 function togglePanel(panel){
-  if(panel.style.top==='30%') closePanel(panel);
-  else openPanel(panel);
-}
-function openPanel(panel){
-  panel.style.top='30%';
-  startBtn.style.display='none';
-  indexBtn.style.display='none';
-  updateBtn.style.display='none';
-}
-function closePanel(panel){
-  panel.style.top='100%';
-  startBtn.style.display='block';
-  indexBtn.style.display='block';
-  updateBtn.style.display='block';
+  if(panel.style.top==='30%'){
+    panel.style.top='100%';
+    startBtn.style.display='block';
+    indexBtn.style.display='block';
+    updatesBtn.style.display='block';
+  } else {
+    panel.style.top='30%';
+    startBtn.style.display='none';
+    indexBtn.style.display='none';
+    updatesBtn.style.display='none';
+  }
 }
 
 // --- Countdown ---
 function startCountdown(){
+  versionLabel.style.display='none';
   startBtn.style.display='none';
   indexBtn.style.display='none';
-  updateBtn.style.display='none';
+  updatesBtn.style.display='none';
   countdownEl.style.display='block';
   let count=3;
   countdownEl.textContent=count;
@@ -243,7 +274,7 @@ function startCountdown(){
   },1000);
 }
 
-// --- Game ---
+// --- GAME LOGIC ---
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -259,17 +290,17 @@ function spawnBubble(){
   const bubble=document.createElement('div');
   bubble.classList.add('bubble');
 
-  if(chance<=0.0005){ bubble.classList.add('instawin'); bubble.textContent="*12*"; bubble.dataset.type="instawin"; }
-  else if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
-  else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.0125){ bubble.classList.add('invert'); bubble.textContent="invert"; bubble.dataset.type="invert"; }
+  else if(chance<=0.015){ bubble.classList.add('instawin'); bubble.textContent="*12*"; bubble.dataset.type="instawin"; }
   else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
   else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
   else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
-  const size=Math.random()*50+60;
+  const size=Math.random()*50+70;
   bubble.style.width=size+'px';
   bubble.style.height=size+'px';
-  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:bubble.dataset.type==="instawin"?size/2:size/3)+'px';
+  bubble.style.fontSize=(bubble.dataset.type==="invert"||bubble.dataset.type==="instawin"?size/3.5:size/3)+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
   bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
@@ -277,11 +308,12 @@ function spawnBubble(){
 
   const pop=()=>{
     if(!gameRunning) return;
-    if(['2x','144','triple','gravity','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
+    if(['2x','invert','instawin','triple','gravity'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
     if(bubble.dataset.type==="2x") score*=2;
-    else if(bubble.dataset.type==="144") score+=144;
+    else if(bubble.dataset.type==="invert") score+=144;
+    else if(bubble.dataset.type==="instawin") score=999999999;
     else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
     else if(bubble.dataset.type==="gravity"){
       const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
@@ -291,7 +323,6 @@ function spawnBubble(){
         b.style.top=(by-parseFloat(b.style.height)/2)+'px';
       });
     }
-    else if(bubble.dataset.type==="instawin") score+=999999999;
     else score++;
     if(score>999999999) score=999999999;
     scoreEl.textContent="Skóre: "+score;
@@ -310,7 +341,7 @@ function spawnSingleBubble(){
   const speedMultiplier=1+elapsed/120;
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   bubble.textContent="12"; bubble.dataset.type="normal";
-  const size=Math.random()*50+60;
+  const size=Math.random()*50+70;
   bubble.style.width=size+'px'; bubble.style.height=size+'px';
   bubble.style.fontSize=size/3+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
@@ -345,7 +376,14 @@ function updateBubbles(){
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none';
-  showEndScreen();
+  if(score===12 || score<=3){
+    easterEl.textContent = (score===12?'12':'BRUH');
+    easterEl.style.display='flex';
+    easterEl.style.animation='fadeShake 5s forwards';
+    setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);
+  } else {
+    showEndScreen();
+  }
 }
 
 function showEndScreen(){
